--- a/app/components/search/search.component.html
+++ b/app/components/search/search.component.html
@@ -1,1 +1,10 @@
-SEARCH
+<h1>Need music ?</h1>
+<p>Use the search input to find your favorite song or album.</p>
+
+<form action="">
+    <div class="form-group">
+        <input class="form-control" type="text" placeholder="Search Artists..." [(ngModel)]="searchStr" name="searchStr" (keyup)="searchMusic()">
+
+    </div>
+
+</form>
