--- a/app/components/about/about.component.html
+++ b/app/components/about/about.component.html
@@ -1,1 +1,3 @@
-ABOUT
+<h2>About angular2-spotify</h2>
+<h3>Verson : 1.0</h3>
+<p>This is an Angular 2 app that uses the Spotify API to find artists and display albums and tracks (with a preview sample).</p>
